Do minor code readability improvements