@@ -24,7 +24,6 @@ import com.evolveum.midpoint.prism.*;
 import com.evolveum.midpoint.prism.crypto.EncryptionException;
 import com.evolveum.midpoint.prism.crypto.Protector;
 import com.evolveum.midpoint.prism.delta.ItemDelta;
-import com.evolveum.midpoint.prism.delta.PlusMinusZero;
 import com.evolveum.midpoint.prism.delta.PrismValueDeltaSetTriple;
 import com.evolveum.midpoint.prism.impl.query.OwnedByFilterImpl;
 import com.evolveum.midpoint.prism.impl.query.ReferencedByFilterImpl;
@@ -72,8 +71,8 @@ public class ExpressionUtil {
     private static final String OP_RESOLVE_REFERENCE = ExpressionUtil.class.getName() + ".resolveReference";
 
     /**
-     * Slightly more powerful version of "convert" as compared to
-     * JavaTypeConverter. This version can also encrypt/decrypt and also handles poly-strings.
+     * Slightly more powerful version of "convert" as compared to {@link JavaTypeConverter#convert(Class, Object)}.
+     * This version can also encrypt/decrypt and also handles poly-strings.
      */
     public static <I, O> O convertValue(
             Class<O> finalExpectedJavaType, Function<Object, Object> additionalConvertor, I inputVal, Protector protector) {
@@ -81,6 +80,7 @@ public class ExpressionUtil {
             return null;
         }
         if (finalExpectedJavaType.isInstance(inputVal)) {
+            //noinspection unchecked
             return (O) inputVal;
         }
 
@@ -220,14 +220,13 @@ public class ExpressionUtil {
                 task,
                 result);
         if (object == null) {
-            return new ArrayList<>();
-        } else if (object instanceof Item) {
-            return ((Item<V, ?>) object).getValues();
-        } else if (object instanceof PrismValue) {
-            return (List<V>) Collections.singletonList((PrismValue) object);
-        } else if (object instanceof ItemDeltaItem) {
-            ItemDeltaItem<V, ?> idi = (ItemDeltaItem<V, ?>) object;
-            PrismValueDeltaSetTriple<V> triple = idi.toDeltaSetTriple();
+            return List.of();
+        } else if (object instanceof Item<?, ?> item) {
+            return (List<V>) item.getValues();
+        } else if (object instanceof PrismValue prismValue) {
+            return (List<V>) List.of(prismValue);
+        } else if (object instanceof ItemDeltaItem<?, ?> idi) {
+            var triple = (PrismValueDeltaSetTriple<V>) idi.toDeltaSetTriple();
             return triple != null ? triple.getNonNegativeValues() : new ArrayList<>();
         } else {
             throw new IllegalStateException("Unsupported target value(s): " + object.getClass() + " (" + object + ")");
@@ -277,8 +276,9 @@ public class ExpressionUtil {
                 // TODO should we attempt to convert Item to a list of PrismValues?
                 return typedValue;
             }
-        } else if (value instanceof Collection && !((Collection) value).isEmpty()
-                && ((Collection) value).iterator().next() instanceof PrismValue) {
+        } else if (value instanceof Collection<?> collection
+                && !collection.isEmpty()
+                && collection.iterator().next() instanceof PrismValue) {
             if (valueVariableMode == ValueVariableModeType.REAL_VALUE) {
                 return convertPrismValuesToRealValue(typedValue);
             } else {
@@ -291,11 +291,10 @@ public class ExpressionUtil {
 
     private static TypedValue<?> convertItemToRealValues(TypedValue<?> typedValue, PrismContext prismContext) {
         Object value = typedValue.getValue();
-        if (value instanceof PrismObject<?>) {
-            typedValue.setValue(((PrismObject<?>) value).asObjectable());
+        if (value instanceof PrismObject<?> object) {
+            typedValue.setValue(object.asObjectable());
             return typedValue;
-        } else if (value instanceof PrismProperty<?>) {
-            PrismProperty<?> prop = (PrismProperty<?>) value;
+        } else if (value instanceof PrismProperty<?> prop) {
             PrismPropertyDefinition<?> def = prop.getDefinition();
             if (def != null) {
                 if (def.isSingleValue()) {
@@ -309,8 +308,7 @@ public class ExpressionUtil {
                         prop.getElementName(), PrimitiveType.STRING.getQname());
                 return new TypedValue<>(prop.getRealValues(), fakeDef);
             }
-        } else if (value instanceof PrismReference) {
-            PrismReference ref = (PrismReference) value;
+        } else if (value instanceof PrismReference ref) {
             PrismReferenceDefinition def = ref.getDefinition();
             if (def != null) {
                 if (def.isSingleValue()) {
@@ -319,11 +317,11 @@ public class ExpressionUtil {
                     return new TypedValue<>(ref.getRealValues(), def);
                 }
             } else {
-                PrismReferenceDefinition fakeDef = prismContext.definitionFactory().createReferenceDefinition(ref.getElementName(), ObjectType.COMPLEX_TYPE);
+                PrismReferenceDefinition fakeDef = prismContext.definitionFactory().createReferenceDefinition(
+                        ref.getElementName(), ObjectType.COMPLEX_TYPE);
                 return new TypedValue<>(ref.getRealValues(), fakeDef);
             }
-        } else if (value instanceof PrismContainer<?>) {
-            PrismContainer<?> container = (PrismContainer<?>) value;
+        } else if (value instanceof PrismContainer<?> container) {
             PrismContainerDefinition<?> def = container.getDefinition();
             Class<?> containerCompileTimeClass = container.getCompileTimeClass();
             if (containerCompileTimeClass == null) {
@@ -358,12 +356,12 @@ public class ExpressionUtil {
     }
 
     private static TypedValue<?> convertPrismValuesToRealValue(TypedValue<?> typedValue) {
-        Object collection = typedValue.getValue();
-        if (!(collection instanceof Collection)) {
+        Object object = typedValue.getValue();
+        if (!(object instanceof Collection<?> collection)) {
             return typedValue;
         }
         List<Object> realValues = new ArrayList<>();
-        ((Collection<?>) collection).forEach(value -> realValues.add(convertPrismValueToRealValue(value)));
+        collection.forEach(value -> realValues.add(convertPrismValueToRealValue(value)));
         typedValue.setValue(realValues);
         return typedValue;
     }
@@ -374,8 +372,7 @@ public class ExpressionUtil {
     }
 
     private static Object convertPrismValueToRealValue(Object value) {
-        if (value instanceof PrismContainerValue<?>) {
-            PrismContainerValue<?> cval = (PrismContainerValue<?>) value;
+        if (value instanceof PrismContainerValue<?> cval) {
             Class<?> containerCompileTimeClass = cval.getCompileTimeClass();
             if (containerCompileTimeClass == null) {
                 // Dynamic schema. We do not have anything to convert to. Leave it as PrismContainerValue
@@ -383,17 +380,18 @@ public class ExpressionUtil {
             } else {
                 return cval.asContainerable();
             }
-        } else if (value instanceof PrismPropertyValue<?>) {
-            return ((PrismPropertyValue<?>) value).getValue();
-        } else if (value instanceof PrismReferenceValue) {
-            return ((PrismReferenceValue) value).asReferencable();
+        } else if (value instanceof PrismPropertyValue<?> ppv) {
+            return ppv.getValue();
+        } else if (value instanceof PrismReferenceValue prv) {
+            return prv.asReferencable();
         } else {
             // Should we throw an exception here?
         }
         return value;
     }
 
-    private static TypedValue<?> resolveReference(TypedValue<?> referenceTypedValue, String variableName,
+    private static TypedValue<?> resolveReference(
+            TypedValue<?> referenceTypedValue, String variableName,
             ObjectResolver objectResolver, String contextDescription, ObjectVariableModeType objectVariableMode,
             Task task, OperationResult result) throws ExpressionSyntaxException, ObjectNotFoundException,
             CommunicationException, ConfigurationException, SecurityViolationException,
@@ -405,7 +403,7 @@ public class ExpressionUtil {
         OperationResult subResult = result.createMinorSubresult(OP_RESOLVE_REFERENCE);
         try {
             GetOperationOptionsBuilder builder = GetOperationOptionsBuilder.create().allowNotFound();
-            if (reference != null && QNameUtil.match(reference.getType(), ResourceType.COMPLEX_TYPE)) {
+            if (QNameUtil.match(reference.getType(), ResourceType.COMPLEX_TYPE)) {
                 builder = builder.noFetch();
             }
             resolvedTypedValue = resolveReference(
@@ -446,7 +444,8 @@ public class ExpressionUtil {
         }
     }
 
-    static TypedValue<PrismObject<?>> resolveReference(TypedValue<?> refAndDef, ObjectResolver objectResolver,
+    static TypedValue<PrismObject<?>> resolveReference(
+            TypedValue<?> refAndDef, ObjectResolver objectResolver,
             Collection<SelectorOptions<GetOperationOptions>> options, String varDesc, String contextDescription,
             Task task, OperationResult result)
             throws SchemaException, ObjectNotFoundException, CommunicationException, ConfigurationException,
@@ -485,29 +484,29 @@ public class ExpressionUtil {
         }
     }
 
-    public static <ID extends ItemDefinition> ID resolveDefinitionPath(@NotNull ItemPath path,
+    public static <ID extends ItemDefinition<?>> ID resolveDefinitionPath(@NotNull ItemPath path,
             VariablesMap variables, PrismContainerDefinition<?> defaultContext, String shortDesc)
             throws SchemaException {
         while (!path.isEmpty() && !path.startsWithName() && !path.startsWithVariable()) {
             path = path.rest();
         }
-        Object root = defaultContext;
+        ItemDefinition<?> root = defaultContext;
         ItemPath relativePath = path;
         Object first = path.first();
         if (ItemPath.isVariable(first)) {
             relativePath = path.rest();
             String varName = ItemPath.toVariableName(first).getLocalPart();
             if (variables.containsKey(varName)) {
-                TypedValue typeVarValue = variables.get(varName);
+                TypedValue<?> typeVarValue = variables.get(varName);
                 Object varValue = typeVarValue.getValue();
-                if (varValue instanceof ItemDeltaItem<?, ?>) {
-                    root = ((ItemDeltaItem<?, ?>) varValue).getDefinition();
-                } else if (varValue instanceof Item<?, ?>) {
-                    root = ((Item<?, ?>) varValue).getDefinition();
-                } else if (varValue instanceof Objectable) {
-                    root = ((Objectable) varValue).asPrismObject().getDefinition();
-                } else if (varValue instanceof ItemDefinition) {
-                    root = varValue;
+                if (varValue instanceof ItemDeltaItem<?, ?> itemDeltaItem) {
+                    root = itemDeltaItem.getDefinition();
+                } else if (varValue instanceof Item<?, ?> item) {
+                    root = item.getDefinition();
+                } else if (varValue instanceof Objectable objectable) {
+                    root = objectable.asPrismObject().getDefinition();
+                } else if (varValue instanceof ItemDefinition<?> itemDefinition) {
+                    root = itemDefinition;
                 } else {
                     throw new IllegalStateException("Unexpected content of variable " + varName + ": "
                             + varValue + " (" + varValue.getClass() + ")");
@@ -524,51 +523,48 @@ public class ExpressionUtil {
             return null;
         }
         if (relativePath.isEmpty()) {
+            //noinspection unchecked
             return (ID) root;
         }
         if (root instanceof PrismObjectDefinition<?>) {
             return ((PrismObjectDefinition<?>) root).findItemDefinition(relativePath);
         } else if (root instanceof PrismContainerDefinition<?>) {
             return ((PrismContainerDefinition<?>) root).findItemDefinition(relativePath);
-        } else if (root instanceof ItemDefinition) {
+        } else {
             // Except for container (which is handled above)
             throw new SchemaException(
                     "Cannot apply path " + relativePath + " to " + root + " in " + shortDesc);
-        } else {
-            throw new IllegalArgumentException("Unexpected root " + root + " in " + shortDesc);
         }
     }
 
-    public static <IV extends PrismValue, ID extends ItemDefinition<?>> ItemDeltaItem<IV, ID> toItemDeltaItem(Object object) {
+    public static ItemDeltaItem<?, ?> toItemDeltaItem(Object object) {
         if (object == null) {
             return null;
-        } else if (object instanceof ItemDeltaItem<?, ?>) {
-            //noinspection unchecked
-            return (ItemDeltaItem<IV, ID>) object;
-        } else if (object instanceof PrismObject<?>) {
-            //noinspection unchecked
-            return (ItemDeltaItem<IV, ID>) new ObjectDeltaObject((PrismObject<?>) object, null,
-                    (PrismObject<?>) object, ((PrismObject) object).getDefinition());
-        } else if (object instanceof Item<?, ?>) {
-            //noinspection unchecked
-            return new ItemDeltaItem<>((Item<IV, ID>) object, null, (Item<IV, ID>) object, ((Item<IV, ID>) object).getDefinition());
-        } else if (object instanceof ItemDelta<?, ?>) {
-            //noinspection unchecked
-            return new ItemDeltaItem<>(null, (ItemDelta<IV, ID>) object, null, ((ItemDelta<IV, ID>) object).getDefinition());
+        } else if (object instanceof ItemDeltaItem<?, ?> idi) {
+            return idi;
+        } else if (object instanceof PrismObject<?> prismObject) {
+            return ObjectDeltaObject.forUnchanged(prismObject);
+        } else if (object instanceof Item<?, ?> item) {
+            return ItemDeltaItem.forUnchanged(item);
+        } else if (object instanceof ItemDelta<?, ?> itemDelta) {
+            return ItemDeltaItem.forDelta(itemDelta);
         } else {
             throw new IllegalArgumentException("Unexpected object " + object + " " + object.getClass());
         }
     }
 
-    public static ObjectQuery evaluateQueryExpressions(ObjectQuery origQuery, VariablesMap variables, ExpressionProfile expressionProfile,
+    public static ObjectQuery evaluateQueryExpressions(
+            ObjectQuery origQuery, VariablesMap variables, ExpressionProfile expressionProfile,
             ExpressionFactory expressionFactory, PrismContext prismContext, String shortDesc, Task task,
             OperationResult result)
-            throws SchemaException, ObjectNotFoundException, ExpressionEvaluationException, CommunicationException, ConfigurationException, SecurityViolationException {
+            throws SchemaException, ObjectNotFoundException, ExpressionEvaluationException, CommunicationException,
+            ConfigurationException, SecurityViolationException {
         if (origQuery == null) {
             return null;
         }
         ObjectQuery query = origQuery.clone();
-        ObjectFilter evaluatedFilter = evaluateFilterExpressionsInternal(query.getFilter(), variables, expressionProfile,
+        ObjectFilter evaluatedFilter = evaluateFilterExpressionsInternal(
+                query.getFilter(), variables, expressionProfile,
                 expressionFactory, prismContext, shortDesc, task, result);
         query.setFilter(evaluatedFilter);
         return query;
@@ -600,8 +596,7 @@ public class ExpressionUtil {
         }
         Holder<Boolean> result = new Holder<>(false);
         filter.accept(f -> {
-            if (f instanceof ValueFilter<?, ?>) {
-                ValueFilter<?, ?> vf = (ValueFilter<?, ?>) f;
+            if (f instanceof ValueFilter<?, ?> vf) {
                 if (vf.getExpression() != null) {
                     result.setValue(true);
                 }
@@ -611,26 +606,25 @@ public class ExpressionUtil {
     }
 
     @Contract("null, _, _, _, _, _, _, _ -> null; !null, _, _, _, _, _, _, _ -> !null")
-    private static ObjectFilter evaluateFilterExpressionsInternal(ObjectFilter filter,
-            VariablesMap variables, ExpressionProfile expressionProfile, ExpressionFactory expressionFactory, PrismContext prismContext,
-            String shortDesc, Task task, OperationResult result)
-            throws SchemaException, ObjectNotFoundException, ExpressionEvaluationException, CommunicationException, ConfigurationException, SecurityViolationException {
+    private static ObjectFilter evaluateFilterExpressionsInternal(
+            ObjectFilter filter, VariablesMap variables, ExpressionProfile expressionProfile, ExpressionFactory expressionFactory,
+            PrismContext prismContext, String shortDesc, Task task, OperationResult result)
+            throws SchemaException, ObjectNotFoundException, ExpressionEvaluationException, CommunicationException,
+            ConfigurationException, SecurityViolationException {
         if (filter == null) {
             return null;
         }
 
-        if (filter instanceof InOidFilter) {
-            ExpressionWrapper expressionWrapper = ((InOidFilter) filter).getExpression();
-            if (expressionWrapper == null || expressionWrapper.getExpression() == null) {
-                LOGGER.debug("No valueExpression in filter in {}. Returning original filter", shortDesc);
-                InOidFilter inOidFilter = (InOidFilter) filter;
+        if (filter instanceof InOidFilter inOidFilter) {
+            ExpressionType valueExpression = getExpression(inOidFilter.getExpression(), filter, shortDesc);
+            if (valueExpression == null) {
+                // FIXME this should be treated elsewhere!
                 if (inOidFilter.getOids() != null && !inOidFilter.getOids().isEmpty()) {
                     return filter.clone();
+                } else {
+                    return FilterCreationUtil.createNone();
                 }
-                return FilterCreationUtil.createNone();
             }
-
-            ExpressionType valueExpression = getFilterExpression(expressionWrapper, shortDesc);
 
             try {
                 Collection<String> expressionResult = evaluateStringExpression(variables, prismContext,
@@ -647,27 +641,24 @@ public class ExpressionUtil {
                 InOidFilter evaluatedFilter = (InOidFilter) filter.clone();
                 evaluatedFilter.setOids(expressionResult);
                 evaluatedFilter.setExpression(null);
-                if (LOGGER.isTraceEnabled()) {
-                    LOGGER.trace("Transformed filter to:\n{}", evaluatedFilter.debugDump());
-                }
+                LOGGER.trace("Transformed filter to:\n{}", evaluatedFilter.debugDumpLazily());
                 return evaluatedFilter;
             } catch (Exception ex) {
                 throw new ExpressionEvaluationException(ex);
             }
-        } else if (filter instanceof FullTextFilter) {
-            ExpressionWrapper expressionWrapper = ((FullTextFilter) filter).getExpression();
-            if (expressionMissing(expressionWrapper, filter, shortDesc)) {
+        } else if (filter instanceof FullTextFilter fullTextFilter) {
+            ExpressionType expression = getExpression(fullTextFilter.getExpression(), fullTextFilter, shortDesc);
+            if (expression == null) {
                 return filter.clone();
             }
-            ExpressionType valueExpression = getFilterExpression(expressionWrapper, shortDesc);
 
             try {
                 Collection<String> expressionResult = evaluateStringExpression(variables, prismContext,
-                        valueExpression, expressionProfile, expressionFactory, shortDesc, task, result);
+                        expression, expressionProfile, expressionFactory, shortDesc, task, result);
                 if (expressionResult == null || expressionResult.isEmpty()) {
                     LOGGER.debug("Result of search filter expression was null or empty. Expression: {}",
-                            valueExpression);
-                    return createFilterForNoValue(filter, valueExpression);
+                            expression);
+                    return createFilterForNoValue(filter, expression);
                 }
                 // TODO: log more context
                 LOGGER.trace("Search filter expression in the rule for {} evaluated to {}.",
@@ -676,9 +667,7 @@ public class ExpressionUtil {
                 FullTextFilter evaluatedFilter = (FullTextFilter) filter.clone();
                 evaluatedFilter.setValues(expressionResult);
                 evaluatedFilter.setExpression(null);
-                if (LOGGER.isTraceEnabled()) {
-                    LOGGER.trace("Transformed filter to:\n{}", evaluatedFilter.debugDump());
-                }
+                LOGGER.trace("Transformed filter to:\n{}", evaluatedFilter.debugDump());
                 return evaluatedFilter;
             } catch (Exception ex) {
                 throw new ExpressionEvaluationException(ex);
@@ -687,27 +676,25 @@ public class ExpressionUtil {
             List<ObjectFilter> conditions = ((LogicalFilter) filter).getConditions();
             LogicalFilter evaluatedFilter = ((LogicalFilter) filter).cloneEmpty();
             for (ObjectFilter condition : conditions) {
-                ObjectFilter evaluatedSubFilter = evaluateFilterExpressionsInternal(condition, variables, expressionProfile,
+                ObjectFilter evaluatedSubFilter = evaluateFilterExpressionsInternal(
+                        condition, variables, expressionProfile,
                         expressionFactory, prismContext, shortDesc, task, result);
                 evaluatedFilter.addCondition(evaluatedSubFilter);
             }
             return evaluatedFilter;
 
-        } else if (filter instanceof ValueFilter) {
-            ValueFilter<?, ?> valueFilter = (ValueFilter<?, ?>) filter;
-            if (valueFilter.getValues() != null && !valueFilter.getValues().isEmpty()) {
-                // We have value. Nothing to evaluate.
-                return valueFilter.clone();
+        } else if (filter instanceof ValueFilter<?, ?> valueFilter) {
+            if (!valueFilter.hasNoValue()) {
+                return valueFilter.clone(); // We have value. Nothing to evaluate.
             }
 
-            ExpressionWrapper expressionWrapper = valueFilter.getExpression();
-            if (expressionMissing(expressionWrapper, filter, shortDesc)) {
+            ExpressionType valueExpression = getExpression(valueFilter.getExpression(), valueFilter, shortDesc);
+            if (valueExpression == null) {
                 return valueFilter.clone();
             }
-            ExpressionType valueExpression = getFilterExpression(expressionWrapper, shortDesc);
 
             try {
-                ItemDefinition outputDefinition = ((ValueFilter) filter).getDefinition();
+                ItemDefinition<?> outputDefinition = ((ValueFilter<?, ?>) filter).getDefinition();
                 if (outputDefinition == null) {
                     outputDefinition = prismContext.definitionFactory().createPropertyDefinition(ExpressionConstants.OUTPUT_ELEMENT_NAME,
                             DOMUtil.XSD_STRING);
@@ -715,8 +702,9 @@ public class ExpressionUtil {
                 Collection<PrismValue> expressionResults = evaluateExpressionNative(null, variables, outputDefinition,
                         valueExpression, expressionProfile, expressionFactory, shortDesc, task, result);
 
-                List<PrismValue> nonEmptyResults = expressionResults.stream().filter(
-                        expressionResult -> expressionResult != null && !expressionResult.isEmpty()).collect(Collectors.toList());
+                List<PrismValue> nonEmptyResults = expressionResults.stream()
+                        .filter(expressionResult -> expressionResult != null && !expressionResult.isEmpty())
+                        .collect(Collectors.toList());
 
                 if (nonEmptyResults.isEmpty()) {
                     LOGGER.debug("Result of search filter expression was null or empty. Expression: {}",
@@ -741,23 +729,14 @@ public class ExpressionUtil {
                 return evaluatedFilter;
 
             } catch (RuntimeException ex) {
-                LoggingUtils.logException(LOGGER, "Couldn't evaluate expression " + PrettyPrinter.prettyPrint(valueExpression) + ".",
-                        ex);
                 throw new SystemException(
                         "Couldn't evaluate expression" + PrettyPrinter.prettyPrint(valueExpression) + ": " + ex.getMessage(), ex);
-
             } catch (SchemaException ex) {
-                LoggingUtils.logException(LOGGER, "Couldn't evaluate expression " + PrettyPrinter.prettyPrint(valueExpression) + ".",
-                        ex);
                 throw new SchemaException(
                         "Couldn't evaluate expression" + PrettyPrinter.prettyPrint(valueExpression) + ": " + ex.getMessage(), ex);
             } catch (ObjectNotFoundException ex) {
-                LoggingUtils.logException(LOGGER, "Couldn't evaluate expression " + PrettyPrinter.prettyPrint(valueExpression) + ".",
-                        ex);
                 throw ex.wrap("Couldn't evaluate expression" + PrettyPrinter.prettyPrint(valueExpression));
             } catch (ExpressionEvaluationException ex) {
-                LoggingUtils.logException(LOGGER, "Couldn't evaluate expression " + PrettyPrinter.prettyPrint(valueExpression) + ".",
-                        ex);
                 throw new ExpressionEvaluationException(
                         "Couldn't evaluate expression " + PrettyPrinter.prettyPrint(valueExpression) + ": " + ex.getMessage(), ex);
             }
@@ -794,20 +773,20 @@ public class ExpressionUtil {
         }
     }
 
-    private static boolean expressionMissing(ExpressionWrapper expressionWrapper, ObjectFilter filter, String shortDesc) {
-        if (expressionWrapper == null || expressionWrapper.getExpression() == null) {
-            LOGGER.debug("No valueExpression in filter {} in {}. Returning original filter", filter, shortDesc);
-            return true;
+    private static @Nullable ExpressionType getExpression(
+            ExpressionWrapper expressionWrapper, ObjectFilter filter, String shortDesc)
+            throws SchemaException {
+        Object expressionRaw = expressionWrapper != null ? expressionWrapper.getExpression() : null;
+        if (expressionRaw == null) {
+            LOGGER.trace("No valueExpression in filter {} in {}", filter, shortDesc);
+            return null;
+        } else if (expressionRaw instanceof ExpressionType expression) {
+            return expression;
+        } else {
+            throw new SchemaException(
+                    "Unexpected expression type '%s' in element '%s' in %s".formatted(
+                            expressionRaw.getClass(), expressionWrapper.getElementName(), shortDesc));
         }
-        return false;
-    }
-
-    private static ExpressionType getFilterExpression(ExpressionWrapper expressionWrapper, String shortDesc) throws SchemaException {
-        if (!(expressionWrapper.getExpression() instanceof ExpressionType)) {
-            throw new SchemaException("Unexpected filter expression type "
-                    + expressionWrapper.getExpression().getClass() + " in element '" + expressionWrapper.getElementName() + "' in " + shortDesc);
-        }
-        return (ExpressionType) expressionWrapper.getExpression();
     }
 
     private static @NotNull ObjectFilter createFilterForNoValue(ObjectFilter filter, ExpressionType valueExpression)
@@ -816,17 +795,16 @@ public class ExpressionUtil {
                 Objects.requireNonNullElse(valueExpression.getQueryInterpretationOfNoValue(), FILTER_EQUAL_NULL);
 
         switch (queryInterpretationOfNoValue) {
-
-            case FILTER_UNDEFINED:
+            case FILTER_UNDEFINED -> {
                 return FilterCreationUtil.createUndefined();
-
-            case FILTER_NONE:
+            }
+            case FILTER_NONE -> {
                 return FilterCreationUtil.createNone();
-
-            case FILTER_ALL:
+            }
+            case FILTER_ALL -> {
                 return FilterCreationUtil.createAll();
-
-            case FILTER_EQUAL_NULL:
+            }
+            case FILTER_EQUAL_NULL -> {
                 if (filter instanceof ValueFilter) {
                     ValueFilter<?, ?> evaluatedFilter = (ValueFilter<?, ?>) filter.clone();
                     evaluatedFilter.setExpression(null);
@@ -838,13 +816,10 @@ public class ExpressionUtil {
                 } else {
                     throw new IllegalArgumentException("Unknown filter to evaluate: " + filter);
                 }
-
-            case ERROR:
-                throw new ExpressionEvaluationException("Expression " + valueExpression + " evaluated to no value");
-
-            default:
-                throw new IllegalArgumentException("Unknown value " + queryInterpretationOfNoValue + " in queryInterpretationOfNoValue in " + valueExpression);
-
+            }
+            case ERROR -> throw new ExpressionEvaluationException("Expression " + valueExpression + " evaluated to no value");
+            default ->
+                    throw new IllegalArgumentException("Unknown value " + queryInterpretationOfNoValue + " in queryInterpretationOfNoValue in " + valueExpression);
         }
 
     }
@@ -889,7 +864,7 @@ public class ExpressionUtil {
                 outputTriple.getNonNegativeValues() : List.of();
     }
 
-    public static <V extends PrismValue, D extends ItemDefinition> V evaluateExpression(
+    public static <V extends PrismValue, D extends ItemDefinition<?>> V evaluateExpression(
             VariablesMap variables, D outputDefinition, ExpressionType expressionType, ExpressionProfile expressionProfile,
             ExpressionFactory expressionFactory, String shortDesc, Task task, OperationResult parentResult)
             throws SchemaException, ExpressionEvaluationException, ObjectNotFoundException, CommunicationException, ConfigurationException, SecurityViolationException {
@@ -985,11 +960,7 @@ public class ExpressionUtil {
             return defaultValue;
         }
         Boolean realValue = booleanPropertyValue.getRealValue();
-        if (realValue == null) {
-            return defaultValue;
-        } else {
-            return realValue;
-        }
+        return Objects.requireNonNullElse(realValue, defaultValue);
     }
 
     public static boolean getBooleanConditionOutput(PrismPropertyValue<Boolean> conditionOutput) {
@@ -1001,16 +972,6 @@ public class ExpressionUtil {
             return false;
         }
         return value;
-    }
-
-    public static VariablesMap compileSources(Collection<Source<?, ?>> sources) {
-        VariablesMap sourcesMap = new VariablesMap();
-        if (sources != null) {
-            for (Source<?, ?> source : sources) {
-                sourcesMap.put(source.getName().getLocalPart(), source, source.getDefinition());
-            }
-        }
-        return sourcesMap;
     }
 
     public static boolean hasExplicitTarget(List<MappingType> mappingTypes) {
@@ -1047,22 +1008,6 @@ public class ExpressionUtil {
         }
         // No value or all values null. Return default.
         return true;
-    }
-
-    public static PlusMinusZero computeConditionResultMode(boolean condOld, boolean condNew) {
-        if (condOld && condNew) {
-            return PlusMinusZero.ZERO;
-        }
-        if (!condOld && !condNew) {
-            return null;
-        }
-        if (condOld && !condNew) {
-            return PlusMinusZero.MINUS;
-        }
-        if (!condOld && condNew) {
-            return PlusMinusZero.PLUS;
-        }
-        throw new IllegalStateException("notreached");
     }
 
     public static void addActorVariableIfNeeded(VariablesMap variables, SecurityContextManager securityContextManager) {
@@ -1106,7 +1051,7 @@ public class ExpressionUtil {
         variables.addVariableDefinition(ExpressionConstants.VAR_ACTOR, actor, actorDef);
     }
 
-    public static <D extends ItemDefinition> Object convertToOutputValue(Long longValue, D outputDefinition,
+    public static <D extends ItemDefinition<?>> Object convertToOutputValue(Long longValue, D outputDefinition,
             Protector protector) throws ExpressionEvaluationException, SchemaException {
         if (longValue == null) {
             return null;
@@ -1121,7 +1066,7 @@ public class ExpressionUtil {
         }
     }
 
-    public static <D extends ItemDefinition> Object convertToOutputValue(String stringValue,
+    public static <D extends ItemDefinition<?>> Object convertToOutputValue(String stringValue,
             D outputDefinition, Protector protector) throws ExpressionEvaluationException, SchemaException {
         if (stringValue == null) {
             return null;
